--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "TND"]
 	path = TND
 	url = https://github.com/TDteach/TrojanNetDetector.git
+[submodule "Spectre"]
+	path = Spectre
+	url = https://github.com/TDteach/spectre-defense.git
