--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "IBAU"]
 	path = IBAU
 	url = https://github.com/TDteach/I-BAU_Adversarial_Unlearning_of-Backdoors_via_implicit_Hypergradient.git
+[submodule "NAD"]
+	path = NAD
+	url = https://github.com/TDteach/NAD.git
